k8s/aws/ingress-mds.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mds
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - prod-api-efood.masihdistaging.in
      secretName: mds-tls
  rules:
    - host: prod-api-efood.masihdistaging.in
      http:
        paths:
          - backend:
              service:
                name: admins-svc
                port:
                  number: 3000
            path: /api/v1/admins/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: auth-svc
                port:
                  number: 3000
            path: /api/v1/auth/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: balances-svc
                port:
                  number: 3000
            path: /api/v1/balances/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: catalogs-svc
                port:
                  number: 3000
            path: /api/v1/catalogs/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: customers-svc
                port:
                  number: 3000
            path: /api/v1/customers/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: deliveries-svc
                port:
                  number: 3000
            path: /api/v1/deliveries/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: loyalties-svc
                port:
                  number: 3000
            path: /api/v1/loyalties/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: merchants-svc
                port:
                  number: 3000
            path: /api/v1/merchants/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: orders-svc
                port:
                  number: 3000
            path: /api/v1/orders/?(.*)
            pathType: Prefix
          - backend:
              service:
                name: payments-svc
                port:
                  number: 3000
            path: /api/v1/payments/?(.*)
            pathType: Prefix
